# poke-palette

./: .gitignore  README.md  Vagrantfile
cookbooks/polyglot/recipes/: default.rb
pokepalette/: buildrun.sh  index.js  package-lock.json  package.json
pokepalette/pokepalette_backend/: match_names.py  palette_colours.py
pokepalette/pokepalette_frontend/: Cargo.toml  index.html  styles.css
pokepalette/pokepalette_frontend/src/: app.rs  lib.rs
