[package]
name = "pokepalette"
version = "0.1.0"
authors = ["Cynthia Zhao <zhicily@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
yew = "0.17"
anyhow = "1.0.32"
serde = "1.0.115"